<resources>
    <string name="app_name">CodeInAndroid</string>
    <string name="todo">TODO</string>
    <string name="cpp">Cpp</string>
    <string name="c">C</string>
    <string name="java">Java</string>
    <string name="python">Python</string>
    <string name="javascript">JavaScript</string>
    <string name="r">R</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="run">run</string>
    <string name="input">Input</string>
    <string name="open">Open</string>
    <string name="save">Save</string>
    <string name="save_as">Save as</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="output">OUTPUT :</string>
    <string name="wrap_line">Wrap Line</string>
    <string name="sign_up_button"><u>Sign Up</u></string>
    <string name="forget_pass_button"><u>Forget Password</u></string>
    <string name="theme">Theme</string>
    <string name="zoom">Zoom</string>
    <string name="code_preview_setting">Code Preview Setting</string>
    <string name="kotlin">Kotlin</string>
    <string-array name="labels_array">
        <item>Home1</item>
        <item>Home2</item>
        <item>Home3</item>
        <item>Home4</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
